--- a/GetTerroristCatalogFile/GetTerroristCatalogFile.vbproj
+++ b/GetTerroristCatalogFile/GetTerroristCatalogFile.vbproj
@@ -67,7 +67,7 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Орел.ico</ApplicationIcon>
+    <ApplicationIcon>eagle.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
@@ -178,7 +178,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Орел.ico" />
+    <Content Include="eagle.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
